# grpc-agent

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/server/: Cargo.toml
examples/server/src/: main.rs
src/: agent.rs  builder.rs  error.rs  jwt.rs  lib.rs  message.rs  tools.rs
src/providers/: mod.rs  ollama.rs  openai.rs
src/tests/: jwt.rs  mod.rs  unit_error.rs
