[package]
name = "rpc-agent"
version = "0.1.4"
edition = "2024"
authors = ["Aminu 'Seun Joshua @seun.aminujoshua@gmail.com"]
license = "MIT"
description = "A modular Rust framework for building RPC-based agents with pluggable provider integrations"
repository = "https://github.com/seun-ja/rpc-agent"
documentation = "https://docs.rs/rpc-agent"

[dependencies]
async-trait = "0.1.89"

tarpc = { version = "0.37", features = ["full"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

rig-core = "0.33.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
schemars = "1.2.1"

thiserror = "2.0.18"
