[package]
name = "grpc-agent-reciever"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.32"

tarpc = { version = "0.37", features = ["full"] }
rpc-agent = { version = "0.1.4", path = "../../../rpc-agent" }
